examples/test/testpolicy13120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13120
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key25: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value14
          key9: value19
      podSelector:
        matchLabels:
          key34: value24
          key25: value34
          key26: value45
